// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Telmisartan Integration Test parses telmisartan 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "C",
        "C",
      ],
      "attachments": {},
      "bonds": [
        null,
        null,
      ],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            "=",
            null,
            "=",
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 5,
          "substitutions": {
            "2": "N",
            "5": "N",
          },
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            "=",
            null,
            "=",
            null,
            "=",
            null,
          ],
          "offset": 2,
          "ringNumber": 2,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Telmisartan Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C']);
export const v2 = Ring({ atoms: 'C', size: 5, bonds: ['=', null, '=', null, null], branchDepths: [0, 0, 0, 2, 2] });
export const v3 = v2.substitute(2, 'N');
export const v4 = v3.substitute(5, 'N');
export const v5 = Ring({ atoms: 'C', size: 6, ringNumber: 2, offset: 2, bonds: ['=', null, '=', null, '=', null], branchDepths: [0, 0, 1, 1, 2, 2] });
export const v6 = v4.fuse(v5, 2);
v6.rings[0].metaPositions = [3, 4, 5, 10, 11];
v6.rings[0].metaStart = 3;
v6.rings[0].metaEnd = 11;
v6.rings[1].metaPositions = [5, 6, 7, 8, 9, 10];
v6.rings[1].metaStart = 5;
v6.rings[1].metaEnd = 10;
export const v7 = Ring({ atoms: 'C', size: 5, ringNumber: 5, bonds: ['=', null, '=', null, null] });
export const v8 = v7.substitute(2, 'N');
export const v9 = v8.substitute(5, 'N');
v9.metaPositions = [28, 29, 30, 35, 36];
v9.metaStart = 28;
v9.metaEnd = 36;
export const v10 = Ring({ atoms: 'C', size: 6, ringNumber: 3, bonds: ['=', null, '=', null, '=', null], branchDepths: [2, 2, 2, 2, 3, 3] });
v10.metaPositions = [13, 14, 15, 16, 17, 18];
v10.metaStart = 13;
v10.metaEnd = 18;
export const v11 = Ring({ atoms: 'C', size: 6, ringNumber: 6, bonds: ['=', null, '=', null, '=', null] });
v11.metaPositions = [30, 31, 32, 33, 34, 35];
v11.metaStart = 30;
v11.metaEnd = 35;
export const v12 = Ring({ atoms: 'C', size: 6, ringNumber: 4, bonds: ['=', null, '=', null, '=', null] });
v12.metaPositions = [19, 20, 21, 22, 23, 24];
v12.metaStart = 19;
v12.metaEnd = 24;
export const v13 = Linear(['O'], ['=']);
v6.metaSequentialRings = [v9, v10, v11, v12];
v6.metaAllPositions = [3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37];
v6.metaBranchDepthMap = new Map([[3, 0], [4, 0], [5, 0], [6, 0], [7, 1], [8, 1], [9, 2], [10, 2], [11, 2], [12, 2], [13, 2], [14, 2], [15, 2], [16, 2], [17, 3], [18, 3], [19, 2], [20, 2], [21, 2], [22, 2], [23, 2], [24, 2], [25, 2], [27, 2], [28, 1], [29, 1], [30, 1], [31, 1], [32, 1], [33, 1], [34, 1], [35, 1], [36, 1], [37, 1]]);
v6.metaAtomValueMap = new Map([[3, 'C'], [4, 'N'], [5, 'C'], [6, 'C'], [7, 'C'], [8, 'C'], [9, 'C'], [10, 'C'], [11, 'N'], [12, 'C'], [13, 'C'], [14, 'C'], [15, 'C'], [16, 'C'], [17, 'C'], [18, 'C'], [19, 'C'], [20, 'C'], [21, 'C'], [22, 'C'], [23, 'C'], [24, 'C'], [25, 'C'], [27, 'O'], [28, 'C'], [29, 'N'], [30, 'C'], [31, 'C'], [32, 'C'], [33, 'C'], [34, 'C'], [35, 'C'], [36, 'N'], [37, 'C']]);
v6.metaBondMap = new Map([[4, '='], [6, '='], [8, '='], [10, '='], [14, '='], [16, '='], [18, '='], [20, '='], [22, '='], [24, '='], [29, '='], [31, '='], [33, '='], [35, '=']]);
v6.metaSeqAtomAttachments = new Map([[25, [v13]]]);
export const v14 = Linear(['C']);
export const v15 = Molecule([v1, v6, v14]);"
`;

exports[`Losartan Integration Test parses losartan 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "C",
        "C",
        "C",
      ],
      "attachments": {},
      "bonds": [
        null,
        null,
        null,
      ],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {
        "3": [
          {
            "atoms": [
              "Cl",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
        "4": [
          {
            "atoms": [
              "C",
              "O",
            ],
            "attachments": {},
            "bonds": [
              null,
              null,
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        "=",
        null,
        "=",
        null,
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 5,
      "substitutions": {
        "2": "N",
        "5": "N",
      },
      "type": "ring",
    },
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 2,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 3,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
    {
      "atoms": "N",
      "attachments": {},
      "bonds": [
        "=",
        null,
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 4,
      "size": 5,
      "substitutions": {
        "1": "C",
      },
      "type": "ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Losartan Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C', 'C']);
export const v2 = Ring({ atoms: 'C', size: 5, bonds: ['=', null, '=', null, null] });
export const v3 = v2.substitute(2, 'N');
export const v4 = v3.substitute(5, 'N');
export const v5 = Linear(['Cl']);
export const v6 = v4.attach(v5, 3);
export const v7 = Linear(['C', 'O']);
export const v8 = v6.attach(v7, 4);
export const v9 = Linear(['C']);
export const v10 = Ring({ atoms: 'C', size: 6, ringNumber: 2, bonds: ['=', null, '=', null, '=', null], branchDepths: [0, 0, 0, 0, 1, 1] });
export const v11 = Ring({ atoms: 'C', size: 6, ringNumber: 3, bonds: ['=', null, '=', null, '=', null] });
export const v12 = Ring({ atoms: 'N', size: 5, ringNumber: 4, bonds: ['=', null, null, '=', null] });
export const v13 = v12.substitute(1, 'C');
export const v14 = Molecule([v1, v8, v9, v10, v11, v13]);"
`;

exports[`Valsartan Integration Test parses valsartan 1`] = `
{
  "atoms": [
    "C",
    "C",
    "C",
    "C",
    "C",
    "N",
    "C",
    "C",
    "O",
  ],
  "attachments": {
    "5": [
      {
        "atoms": [
          "O",
        ],
        "attachments": {},
        "bonds": [
          "=",
        ],
        "type": "linear",
      },
    ],
    "6": [
      {
        "components": [
          {
            "atoms": [
              "C",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
          {
            "atoms": "C",
            "attachments": {},
            "bonds": [
              "=",
              null,
              "=",
              null,
              "=",
              null,
            ],
            "offset": 0,
            "ringNumber": 1,
            "size": 6,
            "substitutions": {},
            "type": "ring",
          },
          {
            "rings": [
              {
                "atoms": "C",
                "attachments": {},
                "bonds": [
                  "=",
                  null,
                  "=",
                  null,
                  "=",
                  null,
                ],
                "offset": 0,
                "ringNumber": 2,
                "size": 6,
                "substitutions": {},
                "type": "ring",
              },
              {
                "atoms": "N",
                "attachments": {},
                "bonds": [
                  "=",
                  null,
                  null,
                  "=",
                  null,
                ],
                "offset": 0,
                "ringNumber": 3,
                "size": 5,
                "substitutions": {
                  "1": "C",
                },
                "type": "ring",
              },
            ],
            "type": "fused_ring",
          },
          {
            "atoms": "N",
            "attachments": {},
            "bonds": [
              "=",
              null,
              null,
              "=",
              null,
            ],
            "offset": 0,
            "ringNumber": 3,
            "size": 5,
            "substitutions": {
              "1": "C",
            },
            "type": "ring",
          },
        ],
        "type": "molecule",
      },
    ],
    "7": [
      {
        "atoms": [
          "C",
          "C",
        ],
        "attachments": {
          "1": [
            {
              "atoms": [
                "C",
              ],
              "attachments": {},
              "bonds": [
                null,
              ],
              "type": "linear",
            },
          ],
        },
        "bonds": [
          null,
          null,
        ],
        "type": "linear",
      },
    ],
    "8": [
      {
        "atoms": [
          "O",
        ],
        "attachments": {},
        "bonds": [
          "=",
        ],
        "type": "linear",
      },
    ],
  },
  "bonds": [
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
  ],
  "type": "linear",
}
`;

exports[`Valsartan Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C', 'C', 'C', 'N', 'C', 'C', 'O']);
export const v2 = Linear(['O'], ['=']);
export const v3 = v1.attach(v2, 5);
export const v4 = Linear(['C']);
export const v5 = Ring({ atoms: 'C', size: 6, bonds: ['=', null, '=', null, '=', null], branchDepths: [1, 1, 1, 1, 2, 2] });
export const v6 = Ring({ atoms: 'C', size: 6, ringNumber: 2, bonds: ['=', null, '=', null, '=', null] });
export const v7 = Ring({ atoms: 'N', size: 5, ringNumber: 3, bonds: ['=', null, null, '=', null] });
export const v8 = v7.substitute(1, 'C');
export const v9 = v6.fuse(v8, 0);
export const v10 = Ring({ atoms: 'N', size: 5, ringNumber: 3, bonds: ['=', null, null, '=', null] });
export const v11 = v10.substitute(1, 'C');
export const v12 = Molecule([v4, v5, v9, v11]);
export const v13 = v3.attach(v12, 6);
export const v14 = Linear(['C', 'C']);
export const v15 = Linear(['C']);
export const v16 = v14.attach(v15, 1);
export const v17 = v13.attach(v16, 7);
export const v18 = Linear(['O'], ['=']);
export const v19 = v17.attach(v18, 8);"
`;

exports[`Irbesartan Integration Test parses irbesartan 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "C",
        "C",
        "C",
      ],
      "attachments": {},
      "bonds": [
        null,
        null,
        null,
      ],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {
            "4": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            "=",
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 5,
          "substitutions": {
            "2": "N",
            "5": "N",
          },
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 2,
          "ringNumber": 2,
          "size": 5,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 3,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 4,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
    {
      "atoms": "N",
      "attachments": {},
      "bonds": [
        "=",
        null,
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 5,
      "size": 5,
      "substitutions": {
        "1": "C",
      },
      "type": "ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Irbesartan Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C', 'C']);
export const v2 = Ring({ atoms: 'C', size: 5, bonds: ['=', null, null, null, null] });
export const v3 = v2.substitute(2, 'N');
export const v4 = v3.substitute(5, 'N');
export const v5 = Linear(['O'], ['=']);
export const v6 = v4.attach(v5, 4);
export const v7 = Ring({ atoms: 'C', size: 5, ringNumber: 2, offset: 2, branchDepths: [0, 1, 1, 1, 1] });
export const v8 = v6.fuse(v7, 2);
export const v9 = Linear(['C']);
export const v10 = Ring({ atoms: 'C', size: 6, ringNumber: 3, bonds: ['=', null, '=', null, '=', null], branchDepths: [0, 0, 0, 0, 1, 1] });
export const v11 = Ring({ atoms: 'C', size: 6, ringNumber: 4, bonds: ['=', null, '=', null, '=', null] });
export const v12 = Ring({ atoms: 'N', size: 5, ringNumber: 5, bonds: ['=', null, null, '=', null] });
export const v13 = v12.substitute(1, 'C');
export const v14 = Molecule([v1, v8, v9, v10, v11, v13]);"
`;
